<resources>

    <string name="welcome">Welcome</string>
    <string name="sign_up_to_start_your_journey">Sign Up to start your Journey</string>

    <string name="user_name">User Name</string>
    <string name="go">Go</string>
    <string name="already_have_an_account_sign_in">Already Have An Account ?Sign In</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>

    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="forget_password">Forget password ?</string>
    <string name="new_user_sign_up">New user ? Sign up</string>
    <string name="app_name">Bissalama</string>
    <string name="sign_up_logo">Sign up logo</string>
    <string name="fullname">Fullname</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">sign In</string>
    <string name="sign_in_logo">sign in Logo</string>
    <string name="action_sign_in">Sign in </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">SelectTime</string>
    <string name="hello_agency">Hello Agency</string>
    <string name="hello_clerk">hello_clerk</string>
    <string name="passenger">passenger</string>
    <string name="phone_number">Phone Number</string>

    <string-array name="name_company">
        <item>Al_Ameen</item>
        <item>Al_Ameer</item>
        <item>Al_Emaan</item>
        <item>Al_Ahleaa</item>
        <item>AL_Moftee</item>
        <item>AL_Saraaj</item>
        <item>Somer</item>
    </string-array>
    <string-array name="description_company">
        <item>Quality_Speed_Comfort</item>
        <item>Conditioning_Television_Comfort</item>
    </string-array>
    <string name="title_activity_main_nav_drawer">MainActivityNavDrawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="hello">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_clerk_phone_number">Clerk phone number...</string>
</resources>