<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.ActivitySignIn">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="Bissalama"
        android:textAllCaps="false"
        android:textColor="#81ecec"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:shadowColor="@color/black"
        android:layout_marginTop="6dp"
        android:text="With our best wishes for safety "
        android:textAllCaps="true"
        android:textColor="#81ecec"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="#8BFFFFFF"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_register">

        <Spinner
            android:id="@+id/sp_login_user_type"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:entries="@array/user_type"
            android:gravity="center"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/sp_login_agency_name"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:entries="@array/name_company"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            android:visibility="gone"
            />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number_signin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="phone"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"

            android:background="@drawable/button_shape"
            android:text="@string/forget_password"

            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_go_sign_in"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/go"
            android:textColor="#fff"

            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape"
            android:elevation="0dp"
            android:text="@string/new_user_sign_up"

            tools:ignore="TouchTargetSizeCheck"
            tools:targetApi="lollipop" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>